@@ -28,4 +28,4 @@
 
         - if current_user && current_user.admin?
           %br
-          = link_to( :assume_id.l, assume_user_path(user) )
+          = link_to( :assume_id.l, assume_user_path(user), :method => :post )
